fix icons, removed padding that used to prevent wrapping

--- a/hearth/media/css/listing.styl
+++ b/hearth/media/css/listing.styl
@@ -574,7 +574,6 @@ ratings-sidebar() {
         .icon {
             float: left;
             margin-right: 15px;
-            padding-bottom: 70px;
             position: static;
             width: 64px;
         }
